compiler/testData/checkerWithErrorTypes/quick/backingField/ReadNonexistentCustomGetInAnonymous.jet
class ReadNonexistent() {
    val a: Int
        get() = 1

    {
        val x = <!NO_BACKING_FIELD!>$a<!>
    }
}
